# taiko-music-generator

./: .gitignore  README.md  app.py  config.py  pyproject.toml
parser/: __init__.py
parser/music/: generate.py  utils.py
parser/tja/: ryan.py  utils.py
