[tool.poetry]
name = "taiko-music-generator"
version = "0.1.0"
description = "Input your .tja file to convert Taiko Music Song."
authors = ["ryanlinjui <ryanlinjui@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.19.2"
chardet = "^5.2.0"
typer = "0.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
